[workspace]
# Built for the local system by default.
members = ["common", "client", "server"]

# This one needs special build settings.
# You must manually go into its directory and call cargo yourself.
exclude = ["grid_engine_wasm_api"]

# Release build uses every possible optimization.
[profile.release]
lto = true
opt-level=3
incremental = false
codegen-units = 1