[package]
name = "client"
version = "0.1.0"
authors = ["James Carl"]
edition = "2018"
license = "AGPL"

[dependencies]
anyhow = "1.0"
argh = "0.1"
base64 = "0.13"
common = { path = "../common" }
env_logger = "0.8"
futures = "0.3"
legion = "0.4"
log = "0.4"
native-dialog = "0.5"
num-traits = "0.2"
platform-dirs = "0.3"
rand = "0.8"
rsa = "0.4"
wgpu = "0.8"
winit = "0.25"
bytemuck = "1.5"
nalgebra = { version = "0.26", features = ["serde-serialize", "bytemuck"] }
bytemuck_derive = "1.0"

# We *might* use egui. I'm not set on it yet. Iced is also a valid option.
egui = "0.12"
egui_wgpu_backend = "0.8"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", rev = "943f09fef7b7ac305432d0bc899b54716c1e765b" }
