[package]
name = "client"
version = "0.1.0"
authors = ["James Carl"]
edition = "2018"
license = "AGPL"

[dependencies]
amethyst_input = "0.15"
anyhow = "1.0"
argh = "0.1"
base64 = "0.13"
bytemuck = "1.5"
bytemuck_derive = "1.0"
common = { path = "../common" }
egui = "0.12"
egui_wgpu_backend = "0.8"
egui_winit_platform = "0.8"
env_logger = "0.8"
futures = "0.3"
legion = "0.4"
log = "0.4"
nalgebra = { version = "0.26", features = ["serde-serialize", "bytemuck"] }
native-dialog = "0.5"
num-traits = "0.2"
platform-dirs = "0.3"
rand = "0.8"
ron = "0.6"
rsa = "0.4"
serde = "1.0"
wgpu = "0.8"
winit = { version = "0.25", features = ["serde"] }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", tag = "v0.4.0-alpha.9" }
