[package]
name = "common"
version = "0.1.0"
authors = ["James Carl"]
edition = "2018"
license = "AGPL"

[dependencies]
anyhow = "1.0"
derive-error = "0.0"
serde_cbor = "0.11"
lazy_static = "1.4"
log = "0.4"
nalgebra = "0.26"
num-traits = "0.2"
os_info = "3.0"
rand = "0.8"
rsa = "0.4"
serde = "1.0"
simba = { version = "0.4.0", features = ["partial_fixed_point_support"] }
sys-info = "0.9.0"
wasmer-runtime = "0.17"
zip = { version = "0.5", features = ["bzip2"] }
static_assertions = "1.1"
antidote = "1.0"
flate2 = "1.0"
typetag = "0.1"
simrs = "0.1"
rayon = "1.4"
slotmap = "1.0"

[dev-dependencies]
tempfile = "3.1"
criterion = "0.3"
pprof = { version = "0.4", features = ["flamegraph"] }

[[bench]]
name = "benchmarks"
harness = false
