[package]
name = "common"
version = "0.1.0"
authors = ["James Carl"]
edition = "2018"
license = "AGPL"

[dependencies]
anyhow = "1.0"
derive-error = "0.0"
serde_cbor = "0.11"
lazy_static = "1.4"
log = "0.4"
nalgebra = { version = "0.26", features = ["serde-serialize"] }
os_info = "3.0"
serde = "1.0"
simba = { version = "0.4.0", features = ["partial_fixed_point_support"] }
sys-info = "0.9.0"
zip = { version = "0.5", features = ["bzip2"] }
static_assertions = "1.1"
antidote = "1.0"
flate2 = "1.0"
typetag = "0.1"
legion = "0.4"
itertools = "0.10"

[dev-dependencies]
tempfile = "3.1"
criterion = "0.3"
pprof = { version = "0.4", features = ["flamegraph"] }
rayon = "1.5"

[[bench]]
name = "benchmarks"
harness = false
