[package]
name = "common"
version = "0.1.0"
authors = ["James Carl"]
edition = "2018"
license = "AGPL"

[dependencies]
antidote = "1.0"
anyhow = "1.0"
derive-error = "0.0"
flate2 = "1.0"
itertools = "0.10"
lazy_static = "1.4"
legion = "0.4"
log = "0.4"
nalgebra = { version = "0.26", features = ["serde-serialize", "bytemuck"] }
os_info = "3.0"
rapier3d = { version = "0.8", features = ["simd-stable", "parallel", "serde-serialize"] }
serde = "1.0"
serde_cbor = "0.11"
static_assertions = "1.1"
sys-info = "0.9.0"
zip = { version = "0.5", features = ["bzip2"] }

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.4", features = ["flamegraph"] }
rayon = "1.5"
tempfile = "3.1"

[[bench]]
harness = false
name = "benchmarks"
