[package]
name = "grid_engine_wasm_api"
version = "0.0.0"
authors = ["James Carl"]
edition = "2018"
license = "AGPL"
description = "An API wrapper along with other tools to assist in writing your own content for the Grid Engine."
keywords = ["gamedev", "gridengine", "gridlocked", "modding", "mod"]
repository = "https://github.com/IamTheCarl/grid_engine"
readme = "README.md"

[dependencies]
