[package]
name = "gpu_code"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu.git", rev = "v0.4.0-alpha.9", features = ["glam"] }
# glam = { version = "0.15.1", default-features = false, features = ["libm", "scalar-math", "spirv-std"] }
