[package]
name = "cargo-grid"
version = "0.1.0"
authors = ["James Carl"]
edition = "2018"
license-file = "../COPYING"
description = "A command line tool to assist in developing mods for gridlocked."
keywords = ["gamedev", "gridengine", "gridlocked", "modding", "mod"]
repository = "https://github.com/IamTheCarl/grid_engine"
readme = "README.md"

[dependencies]
argh = "0.1.3"
probe-rs-cli-util = "0.9.0"
colored = "2.0.0"
zip = { version = "0.5.8", features = [ "bzip2" ] }
toml = "0.5.6"
postcard = { version = "0.5.1", features = ["use-std"] }
serde = "1.0.116"