[package]
name = "cargo-grid"
version = "0.1.0"
authors = ["James Carl"]
edition = "2018"
license-file = "../../COPYING"
description = "A command line tool to assist in developing mods for gridlocked."
keywords = ["gamedev", "gridengine", "gridlocked", "modding", "mod"]
repository = "https://github.com/IamTheCarl/grid_engine"
readme = "README.md"

[dependencies]
argh = "0.1.3"
serde_cbor = "0.11.1"
cargo_metadata = "0.11.3"
colored = "2.0.0"
common = { path = "../common" }
serde = "1.0.116"
toml = "0.5.6"
zip = { version = "0.5.8", features = ["bzip2"] }
