[package]
name = "client"
version = "0.1.0"
authors = ["James Carl"]
edition = "2018"
license = "AGPL"

[dependencies]
argh = "0.1.3"
common = { path = "../common" }
env_logger = "0.7.1"
futures = "0.3"
imgui = "0.4.0"
imgui-wgpu = "0.9.0"
imgui-winit-support = "0.4.0"
jemallocator = "0.3.2"
legion = "0.3.1"
log = "0.4.11"
native-dialog = "0.4.3"
num-traits = "0.2.12"
rayon = "1.4.1"
vk-shader-macros = "0.2.6"
wgpu = "0.6.0"
winit = "0.22.2"
anyhow = "1.0.32"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.6.3"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.6.4"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.6.2"
