[package]
name = "client"
version = "0.1.0"
authors = ["James Carl"]
edition = "2018"
license = "AGPL"

[dependencies]
anyhow = "1.0.32"
argh = "0.1.3"
base64 = "0.13.0"
common = { path = "../common" }
egui = "0.2.0"
egui_wgpu_backend = "0.1.0"
egui_winit_platform = "0.1.0"
env_logger = "0.7.1"
futures = "0.3"
jemallocator = "0.3.2"
legion = "0.3.1"
log = "0.4.11"
native-dialog = "0.4.3"
num-traits = "0.2.12"
platform-dirs = "0.3.0"
rand = "0.7.3"
rayon = "1.4.1"
rsa = "0.3.0"
vk-shader-macros = "0.2.6"
wgpu = "0.6.0"
winit = "0.23.0"
chrono = "0.4.19"
bytemuck = "1.4.1"
nalgebra = "0.22.1"
bytemuck_derive = "1.0.0"
goods = "0.5.3"
image = "0.23.10"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.6.3"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.6.4"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.6.2"
