[package]
name = "common"
version = "0.1.0"
authors = ["James Carl"]
edition = "2018"
license = "AGPL"

[dependencies]
anyhow = "1.0.32"
base64 = "0.13.0"
bincode = "1.3.1"
laminar = "0.4.0"
lazy_static = "1.4.0"
legion = "0.3.1"
log = "0.4.11"
memmap = "0.7.0"
nalgebra = "0.22.0"
num-traits = "0.2.12"
os_info = "3.0.0"
platform-dirs = "0.3.0"
rand = "0.7.3"
rsa = "0.3.0"
rstar = "0.8.2"
serde = "1.0.116"
simba = { version = "0.2.0", features = ["partial_fixed_point_support"] }
slotmap = "0.4.0"
sys-info = "0.7.0"
threadpool = "1.8.1" # TODO Remove that once you cleanup the scheduler.
wasmtime = "0.20.0"
zip = { version = "0.5.8", features = [ "bzip2" ] }
