[package]
name = "proc_macros"
version = "0.0.0"
authors = ["James Carl"]
edition = "2018"
license-file = "../COPYING"
description = "An API wrapper along with other tools to assist in writing your own content for the Grid Engine."
keywords = ["gamedev", "gridengine", "gridlocked", "modding", "mod"]
repository = "https://github.com/IamTheCarl/grid_engine"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.24"
